--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
             integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="./styles/styles.css"/>
+        <link rel="stylesheet" href="./styles/media.css"/>
     </head>
     <body>
-        <header>
+        <!-- <header>
             <div class="container header-cont">
                 <nav class="header-nav"> 
                     <a class="logo link" href="./index.html">Web<span class="accent">Studio</span></a>
@@ -31,7 +32,7 @@
                     </ul>
                 </address>
             </div>
-        </header>
+        </header> -->
         <main>
             <section class="hero">
                 <div class="container">
@@ -39,12 +40,12 @@
                     <button class="hero-button" data-modal-open type="button">Order Service</button>
                 </div >
             </section>
-            <section class="features">
+            <!-- <section class="features">
                 <div class="container">
                     <h2 class="section-title" hidden>features</h2>
                     <ul class="feat-list list">
                         <li class="feat-list-item">
-                            <div class="feat-soc-link">
+                            <div class="feat-link">
                                 <svg width="64" height="64">
                                     <use href="./images/icons.svg#icon-Future-img-antenna"> </use>
                                 </svg>
@@ -53,7 +54,7 @@
                             <p class="list-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                         </li>
                         <li class="feat-list-item">
-                            <div class="feat-soc-link">
+                            <div class="feat-link">
                                 <svg width="64" height="64">
                                     <use href="./images/icons.svg#icon-Future-img-clock"> </use>
                                 </svg>
@@ -62,7 +63,7 @@
                             <p class="list-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                         </li>
                         <li class="feat-list-item">
-                            <div class="feat-soc-link">
+                            <div class="feat-link">
                                 <svg width="64" height="64">
                                     <use href="./images/icons.svg#icon-Future-img-diagram"> </use>
                                 </svg>
@@ -71,8 +72,8 @@
                             <p class="list-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                         </li>
                         <li class="feat-list-item">
-                            <div class="feat-soc-link">
-                                <svg width="64" height="64" class="feat-soc-icon">
+                            <div class="feat-link">
+                                <svg width="64" height="64">
                                     <use href="./images/icons.svg#icon-Future-img-astronaut"> </use>
                                 </svg>
                             </div>
@@ -81,8 +82,8 @@
                         </li>
                     </ul>
                 </div>
-            </section>
-            <section class="widget">
+            </section> -->
+            <!-- <section class="widget">
                 <div class="container">
                     <h2 class="section-title">What are we doing</h2>
                     <ul class="section-list list">
@@ -91,8 +92,8 @@
                         <li class="section-item"><img src="./images/picture3.jpg" alt="phone screen on laptop screen background" width="360" height="300"></li>
                     </ul>
                 </div >
-            </section>
-            <section class="team">
+            </section> -->
+            <!-- <section class="team">
                 <div class="container">
                     <h2 class="section-title">Our Team</h2>
                     <ul class="section-list list" >
@@ -242,8 +243,8 @@
                         </li>
                     </ul>
                 </div>
-            </section>
-            <section class="customers">
+            </section> -->
+            <!-- <section class="customers">
                 <div class="container">
                     <h2 class="cust-title">Customers</h2>
                     <ul class="cust-list list">
@@ -291,9 +292,9 @@
                         </li>
                     </ul>
                 </div >
-            </section>
+            </section> -->
         </main>
-        <footer class="footer">
+        <!-- <footer class="footer">
             <div class="container footer-container">
                 <div class="footer-logo-container">
                     <a class="logo link" href="./index.html">Web<span class="footer-accent">Studio</span></a>
@@ -347,7 +348,7 @@
                     </label>
                 </form>
             </div>
-        </footer>
+        </footer> -->
         <div class="backdrop is-hidden" data-modal>
             <div class="modal">
                 <button type="button" class="modal-close" data-modal-close>
