--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
             </div>
         </div>
         <script src="./js/modal.js"></script>
-        <script src="./js/menu.js"></script>
+        <script src="./js/mobile-menu.js"></script>
     </body>
 </html>
 
